# context-ir

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILDLOG.md  EVAL.md  PLAN.md  PORTFOLIO_CASE_STUDY.md  PORTFOLIO_CASE_STUDY_SOURCE.md  PORTFOLIO_OVERVIEW.md  PORTFOLIO_SOURCE_BRIEF.md  PORTFOLIO_TECHNICAL_BRIEF.md  PUBLIC_CLAIMS.md  README.md  pyproject.toml
tests/: test_analyzer.py  test_binder.py  test_compiler.py  test_dependency_frontier.py  test_diagnostics.py  test_eval_bundle.py  test_eval_manifest.py  test_eval_metrics.py  test_eval_oracles.py  test_eval_pipeline.py  test_eval_providers.py  test_eval_report.py  test_eval_results.py  test_eval_runs.py  test_eval_signal_delattr_probe.py  test_eval_signal_dir_probe.py  test_eval_signal_dir_zero_probe.py  test_eval_signal_dynamic_import_builtin_probe.py  test_eval_signal_dynamic_import_imported_alias_probe.py  test_eval_signal_dynamic_import_imported_name_probe.py  test_eval_signal_dynamic_import_probe.py  test_eval_signal_dynamic_import_root_alias_probe.py  test_eval_signal_dynamic_import_root_probe.py  test_eval_signal_eval_probe.py  test_eval_signal_exec_probe.py  test_eval_signal_getattr_default_probe.py  test_eval_signal_getattr_default_value_probe.py  test_eval_signal_getattr_probe.py  test_eval_signal_globals_probe.py  test_eval_signal_hasattr_probe.py  test_eval_signal_locals_probe.py  test_eval_signal_metaclass_behavior_probe.py  test_eval_signal_setattr_probe.py  test_eval_signal_smoke.py  test_eval_signal_smoke_b.py  test_eval_signal_smoke_c.py  test_eval_signal_smoke_d.py  test_eval_signal_smoke_e.py  (+19 more)
(+163 files in other folders)
